--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_activity_tab_test">TabTestActivity</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="menu_settings">Ustawienia</string>
+    <string name="menu_info">Informacje</string>
+    <string name="menu_map">Mapa</string>
 </resources>
